# PyReports

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.xlsx
pyreports/: _version.py  pdf.py  xlsx.py
