[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyreports"
dynamic = ["version"]
description = "Toolkit for Documentation and Reporting"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Pablo GP", email="pablogonzalezpila@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "openpyxl",
  "reportlab",
  "pandas"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyreports*"]

[tool.setuptools.dynamic]
version = { attr = "pyreports.__version__" }

[project.urls]
"Homepage" = "https://github.com/PaulFilms/PyReports"
"Documentation" = "https://github.com/PaulFilms/PyReports/blob/main/README.md"
"Bug Tracker" = "https://github.com/PaulFilms/PyReports/issues"
